[package]
name = "ssd1306_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ssd1306_exec"
path = "src/app.rs"


[dependencies]
macroquad = "0.3"
ssd1306 = { version = "*" , path="../simplerSSD1306", features = ["sim"]}
simpler_gfx = { git = "https://github.com/mean00/simpler_gfx.git"}
