[package]
name = "rsssd1306"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cty = "0.2.2"
rnarduino = { path = "../lnArduino/rust/rnArduino" }
lni2c_ssd1306 = { path = "../simpler_SSD1306/rs/lnI2C" }
ssd1306 = { path = "../simpler_SSD1306/rs/simplerSSD1306" }

[lib]
name = "demo"
path = "src/lib.rs"
crate-type = ["staticlib"] # Creates static lib

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = false
opt-level       = 's'
